fix: scroll on small screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,5 +4,7 @@
   > div {
     padding: 20px;
     height: calc(100% - 40px);
+    margin-bottom: 50px;
+    overflow-y: scroll;
   }
 }
