--- a/src/app/spellchecker-inline/spellchecker-inline.component.scss
+++ b/src/app/spellchecker-inline/spellchecker-inline.component.scss
@@ -66,3 +66,8 @@
     }
   }
 }
+
+.report-missing {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
